# transit

./: .gitignore  Cargo.toml  Dockerfile  README.md  protocol.toml
.cargo/: config.toml
.github/workflows/: ci.yml
k6/: transit-encrypt-decrypt.js  transit-envelope-encryption.js  transit-rotate-rewrap.js
transit-cli/: Cargo.toml
transit-cli/src/: main.rs
transit-client/: Cargo.toml
transit-client/src/: connection.rs  error.rs  lib.rs  response.rs
transit-codegen/: Cargo.toml
transit-codegen/src/: generator.rs  main.rs
transit-codegen/src/generators/: go.rs  python.rs  ruby.rs  typescript.rs
transit-core/: Cargo.toml
transit-core/src/: ciphertext.rs  error.rs  key_version.rs  keyring.rs  lib.rs
transit-protocol/: Cargo.toml
transit-protocol/src/: command.rs  dispatch.rs  error.rs  keyring_index.rs  lib.rs  recovery.rs
transit-protocol/src/handlers/: decrypt.rs  encrypt.rs  generate_data_key.rs  hash.rs  health.rs  key_info.rs  mod.rs  rewrap.rs  rotate.rs  sign.rs  verify_signature.rs
transit-protocol/src/resp3/: parse_command.rs  serialize.rs
transit-protocol/tests/: wal_recovery_test.rs
transit-rest/: Cargo.toml
transit-rest/src/: error.rs  json.rs  lib.rs  routes.rs
transit-server/: Cargo.toml
transit-server/src/: config.rs  connection.rs  main.rs  server.rs
