[package]
name = "transit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "keyva-transit-cli"
path = "src/main.rs"

[dependencies]
transit-client = { path = "../transit-client" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
rustyline.workspace = true
serde_json.workspace = true
