[package]
name = "transit-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "keyva-transit"
path = "src/main.rs"

[dependencies]
transit-core.workspace = true
transit-protocol.workspace = true
transit-rest.workspace = true
keyva-crypto.workspace = true
keyva-storage.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
hex.workspace = true
libc.workspace = true
